<resources>
    <string name="app_name_yida">动态以达</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="resource_activity">资源管理</string>

    <string name="generate_qr_code">打印二维码</string>
    <string name="check_detail_text">查看详情</string>
    <string name="hello_second_fragment">Hello second fragment</string>
    <string name="hello_third_fragment">Hello third fragment</string>
    <string name="drawer_close">drawer close</string>
    <string name="drawer_open">drawer open</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="completed_fragment">completed fragment</string>
    <string name="ongoing_fragment">ongoing fragment</string>
    <string name="planned_fragment">planned fragment</string>
    <string name="title_activity_scanner">扫描</string>
    <string name="ic_scanner_title">scan the barcode</string>
    <string name="ic_auto_new">刷新</string>
    <string name="ble_support_text">你的Android版本不支持BLE</string>
    <string name="ble_not_supported">你的设备不支持BLE</string>
    <string name="title_activity_login">登录</string>
    <string name="login_hint_edit_text_username">用户名</string>
    <string name="login_hint_edit_text_password">密码</string>
    <string name="login_hint_check_box_hidden">显示密码</string>
    <string name="resource_management_label">资源管理</string>
    <string name="order_count_label">工单</string>
    <string name="resource_warning_btn_text">上传告警信息</string>
    <string name="title_activity_modify_pwd">修改密码</string>
    <string name="login_text_for_modify_pwd">忘记密码</string>
    <string name="login_text_for_set_ip">请联系管理员进行初始化设置</string>
    <string name="modify_pwd_hint_edit_text_old_pwd">请输入旧密码</string>
    <string name="modify_pwd_hint_edit_text_new_pwd">请输入新密码</string>
    <string name="modify_pwd_hint_edit_text_new_pwd_again">请确认新密码</string>
    <string name="modify_pwd_confirm">确认修改密码</string>
    <string name="title_activity_update">升级</string>
    <string name="title_activity_about">关于</string>
    <string name="title_activity_bluetooth">打印</string>
    <string name="text_cannot_support_bluetooth">您的设备不支持蓝牙</string>
    <string name="text_paired_device">已配对的设备</string>
    <string name="text_other_device">其他设备</string>
    <string name="text_connect_failed">连接失败</string>
    <string name="text_connect_success">连接成功</string>
    <string name="text_search_device">搜索设备</string>
    <string name="text_print">打印</string>
    <string name="text_connect">连接</string>
    <string name="text_connect_please">正在打印中，请稍等</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="toast_hint_for_username_pwd">请输入正确的用户名和密码</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="text_main_log">日志管理</string>
    <string name="text_main_work_order">工单管理</string>
    <string name="text_main_sync">数据同步</string>
    <string name="title_activity_log">日志</string>
    <string name="title_activity_forget">新密码</string>
    <string name="hint_forget_enter">请输入新密码</string>
    <string name="hint_forget_confirm">确认新密码</string>
    <string name="hint_forget_username">确输入用户名</string>
    <string name="btn_forget_confirm">确认</string>
    <string name="title_activity_pwd_protect">密保</string>
    <string name="hint_pwd_protect">请填写答案</string>
    <string name="hint_pwd_protect_spinner">请选择问题</string>
    <string name="protect_spinner_btn">下一步</string>
    <string name="resource_edit_first_hint">网元</string>
    <string name="resource_edit_second_hint">机架</string>
    <string name="resource_edit_third_hint">机框</string>
    <string name="resource_edit_forth_hint">盘</string>
    <string name="resource_edit_wait">正在查询中，请稍等</string>
    <string name="title_activity_detail">详情</string>
    <string name="detail_label_info">详细信息: </string>
    <string name="detail_label_status">状态: </string>
    <string name="title_activity_work_order">工单管理</string>
    <string name="loading">加载中...</string>
    <string name="please_enter_correctly">请输入正确</string>
    <string name="question_is_not_correct">你选择的问题不正确</string>
    <string name="answer_is_not_correct">请输入正确答案</string>
    <string name="pwd_update_success">密码修改成功</string>
    <string name="order_types">工单类型</string>
    <string name="order_status">工单状态</string>
    <string name="title_activity_construct_order">施工工单</string>
    <string name="port_a">A端: </string>
    <string name="port_z">Z端: </string>
    <string name="order_user_operate_complete">回单</string>
    <string name="order_user_operate_accept">接收</string>
    <string name="order_user_operate_return">驳回</string>
    <string name="order_user_operate_write">写入</string>
    <string name="title_activity_electronic_writer">电子标签写入</string>
    <string name="resource_wrong_data">错误的数据</string>
    <string name="please_sync_data">请先同步数据</string>
    <string name="title_activity_setting">设置IP</string>
    <string name="setting_IP">IP</string>
    <string name="setting_port">端口</string>
    <string name="setting_text_btn">设置</string>
    <string name="setting_toast_text">请输入正确的IP和端口号</string>
    <string name="reject_dialog_text">驳回原因</string>
    <string name="reject_dialog_text_star">*</string>
    <string name="reject_dialog_text_hint">请填写驳回原因</string>
    <string name="complete_dialog_text_hint">确认回单</string>
    <string name="complete_info_dialog_text_hint">确认完成后回单，是否回单？\n备注：</string>
    <string name="complete_edit_dialog_text_hint">备注</string>
    <string name="complete_dialog_text_hint_result">已回单</string>
    <string name="title_activity_inspect_order">巡检工单</string>
    <string name="order_inspect_btn">开始巡检</string>
    <string name="order_write_btn">写入电子标签</string>
    <string name="toast_bad_info">请检查数据</string>
    <string name="you_should_update_your_app">您的应用有更新</string>
    <string name="update_dialog">信息</string>
    <string name="check_update_text">检查更新</string>
    <string name="download_new_app">下载新版本</string>
    <string name="log_action_clear">清除</string>
    <string name="title_activity_configuration">配置工单</string>
    <string name="title_activity_collect">资源采集工单</string>
    <string name="collect_item_status"> -- 已采集</string>
    <string name="collect_item_label">待采集设备</string>
    <string name="already_inspected">已巡检</string>
    <string name="start_to_collect">开始采集</string>
    <string name="already_collected">已采集</string>
    <string name="write_configuration">写入配置</string>

</resources>
