<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_forget" tools:context="com.yida.handset.ForgetActivity">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_forget_username"
        android:layout_marginLeft="@dimen/login_edit_text_margin"
        android:layout_marginRight="@dimen/login_edit_text_margin"
        android:layout_marginTop="@dimen/login_edit_text_margin_top"
        android:id="@+id/enter_username"
        android:layout_centerHorizontal="true"
        android:maxLength="15"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_forget_enter"
        android:layout_marginLeft="@dimen/login_edit_text_margin"
        android:layout_marginRight="@dimen/login_edit_text_margin"
        android:layout_marginTop="@dimen/login_edit_text_margin_top"
        android:id="@+id/enter_new_pwd"
        android:layout_centerHorizontal="true"
        android:maxLength="15"
        android:layout_below="@id/enter_username"
        android:inputType="textPassword"/>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_forget_confirm"
        android:layout_marginLeft="@dimen/login_edit_text_margin"
        android:layout_marginRight="@dimen/login_edit_text_margin"
        android:layout_marginTop="@dimen/login_edit_text_margin_top"
        android:id="@+id/confirm_new_pwd"
        android:layout_centerHorizontal="true"
        android:maxLength="15"
        android:layout_below="@id/enter_new_pwd"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_new_pwd_btn"
        android:text="@string/btn_forget_confirm"
        android:layout_below="@id/confirm_new_pwd"
        android:layout_marginTop="@dimen/login_edit_text_margin_top3"
        android:layout_marginLeft="@dimen/login_edit_text_margin"
        android:layout_marginRight="@dimen/login_edit_text_margin"
        style="@style/StyleButton"
        />
</RelativeLayout>
