<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.yida.handset.UpdatePwdActivity">

    <android.support.v7.widget.Toolbar
        style="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/modify_pwd_hint_edit_text_old_pwd"
        android:layout_marginLeft="@dimen/login_edit_text_margin"
        android:layout_marginRight="@dimen/login_edit_text_margin"
        android:layout_marginTop="@dimen/login_edit_text_margin_top"
        android:id="@+id/old_password"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbar"/>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/modify_pwd_hint_edit_text_new_pwd"
        android:layout_marginLeft="@dimen/login_edit_text_margin"
        android:layout_marginRight="@dimen/login_edit_text_margin"
        android:layout_marginTop="@dimen/login_edit_text_margin_top"
        android:id="@+id/new_password"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/old_password"/>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/modify_pwd_hint_edit_text_new_pwd_again"
        android:layout_marginLeft="@dimen/login_edit_text_margin"
        android:layout_marginRight="@dimen/login_edit_text_margin"
        android:layout_marginTop="@dimen/login_edit_text_margin_top"
        android:id="@+id/new_password_again"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/new_password"/>
    <com.rey.material.widget.Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Material.Drawable.Ripple.Wave"
        android:id="@+id/confirm_to_modify"
        android:text="@string/modify_pwd_confirm"
        android:layout_below="@id/new_password_again"
        android:layout_marginTop="@dimen/login_edit_text_margin_top3"
        android:layout_marginLeft="@dimen/login_edit_text_margin"
        android:layout_marginRight="@dimen/login_edit_text_margin"
        app:rd_enable="true"
        android:textColor="@android:color/white"
        android:background="@drawable/button_unselected"
        app:rd_rippleAnimDuration="500"/>

</RelativeLayout>
