<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_pwd_protect" tools:context="com.yida.handset.PwdProtectActivity">

    <com.rey.material.widget.Spinner
        style="@style/StyleSpinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/resource_spinner_height"
        android:layout_marginLeft="@dimen/login_edit_text_margin"
        android:layout_marginRight="@dimen/login_edit_text_margin"
        android:layout_centerHorizontal="true"
        app:spn_label="@string/hint_pwd_protect_spinner"
        android:layout_marginTop="@dimen/login_edit_text_margin_top"
        android:id="@+id/spinner_question" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pwd_protect"
        android:layout_marginLeft="@dimen/login_edit_text_margin"
        android:layout_marginRight="@dimen/login_edit_text_margin"
        android:layout_marginTop="@dimen/login_edit_text_margin_top"
        android:id="@+id/answer"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/spinner_question"
        android:maxLength="15"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/next_btn"
        android:text="@string/protect_spinner_btn"
        android:layout_below="@id/answer"
        android:layout_marginTop="@dimen/login_edit_text_margin_top3"
        android:layout_marginLeft="@dimen/login_edit_text_margin"
        android:layout_marginRight="@dimen/login_edit_text_margin"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background_selector"
        />
</RelativeLayout>
