<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yida.handset.workorder.SettingActivity">

    <android.support.v7.widget.Toolbar
        style="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setting_IP"
        android:layout_marginLeft="@dimen/login_edit_text_margin"
        android:layout_marginRight="@dimen/login_edit_text_margin"
        android:layout_marginTop="@dimen/login_edit_text_margin_top"
        android:id="@+id/settingIP"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbar"
        android:maxLength="15"/>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setting_port"
        android:layout_marginLeft="@dimen/login_edit_text_margin"
        android:layout_marginRight="@dimen/login_edit_text_margin"
        android:layout_marginTop="@dimen/login_edit_text_margin_top2"
        android:id="@+id/settingPort"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/settingIP"
        android:inputType="number"
        android:maxLength="4"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/set_btn"
        android:text="@string/setting_text_btn"
        android:layout_below="@id/settingPort"
        android:layout_marginTop="@dimen/login_edit_text_margin_top3"
        android:layout_marginLeft="@dimen/login_edit_text_margin"
        android:layout_marginRight="@dimen/login_edit_text_margin"
        style="@style/StyleButton"
        />

</RelativeLayout>
