<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context="com.yida.handset.ResourceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/selections"
        android:paddingLeft="@dimen/resource_spinner_padding"
        android:paddingRight="@dimen/resource_spinner_padding">
        <com.rey.material.widget.Spinner
            style="@style/StyleSpinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/resource_spinner_height"
            android:gravity="center_vertical"
            android:id="@+id/spinner_station"
            android:layout_marginTop="@dimen/resource_edit_text_margin_top"
            app:spn_label="@string/resource_edit_first_hint"/>
        <com.rey.material.widget.Spinner
            style="@style/StyleSpinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/resource_spinner_height"
            android:gravity="center_vertical"
            android:id="@+id/spinner_rack"
            android:layout_marginTop="@dimen/resource_edit_text_margin_top"
            app:spn_label="@string/resource_edit_second_hint"/>
        <com.rey.material.widget.Spinner
            style="@style/StyleSpinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/resource_spinner_height"
            android:gravity="center_vertical"
            android:id="@+id/spinner_frame"
            android:layout_marginTop="@dimen/resource_edit_text_margin_top"
            app:spn_label="@string/resource_edit_third_hint"/>
        <com.rey.material.widget.Spinner
            style="@style/StyleSpinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/resource_spinner_height"
            android:gravity="center_vertical"
            android:id="@+id/spinner_disk"
            android:layout_marginTop="@dimen/resource_edit_text_margin_top"
            app:spn_label="@string/resource_edit_forth_hint"/>

        <!--<android.support.v7.widget.AppCompatSpinner-->
            <!--style="@style/Base.Widget.AppCompat.Spinner.Underlined"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="@dimen/resource_spinner_height"-->
            <!--android:gravity="center_vertical"-->
            <!--android:id="@+id/spinner_disk"-->
            <!--/>-->
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/selections"
        android:background="@drawable/button_warning_selector"
        android:layout_marginTop="@dimen/resource_warning_btn_margin_top"
        android:layout_marginLeft="@dimen/login_edit_text_margin"
        android:layout_marginRight="@dimen/login_edit_text_margin"
        android:id="@+id/btn_warning"
        android:clickable="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/resource_alarm"
                android:layout_marginLeft="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resource_warning_btn_text"
                android:textColor="@android:color/white"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/btn_warning"
        android:layout_marginTop="@dimen/resource_warning_btn_margin_top"
        android:layout_marginLeft="@dimen/login_edit_text_margin"
        android:layout_marginRight="@dimen/login_edit_text_margin"
        android:id="@+id/place_button_generate"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/button_background_selector"
            android:id="@+id/check_detail"
            android:clickable="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/resource_check"
                    android:layout_marginLeft="5dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_detail_text"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/button_background_selector"
            android:layout_marginLeft="8dp"
            android:id="@+id/generate_code"
            android:clickable="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/resource_qr_code"
                    android:layout_marginLeft="5dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/generate_qr_code"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/img"
        android:layout_below="@id/place_button_generate"
        android:layout_marginTop="@dimen/resource_image_margin_top"/>

</RelativeLayout>
