<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yida.handset.ConfigurationActivity">

    <android.support.v7.widget.Toolbar
        style="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:id="@+id/top_layout"
        android:layout_below="@id/toolbar"
        android:gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/order_id"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/order_status"
            android:layout_marginRight="16dp"
            android:textSize="16sp"
            android:layout_weight="1"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/detail_line"
        android:id="@+id/divider"
        android:layout_below="@id/top_layout"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/operate_bottom"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/construct_order_bottom_margin_left"
            android:layout_marginRight="@dimen/construct_order_bottom_margin_right"
            android:text="@string/order_user_operate_complete"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background_selector"
            android:id="@+id/complete_order"
            android:layout_marginBottom="@dimen/construct_order_bottom_margin_bottom"
            android:visibility="gone"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/construct_order_bottom_margin_inter"
            android:text="@string/order_user_operate_accept"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background_selector"
            android:layout_marginBottom="@dimen/construct_order_bottom_margin_bottom"
            android:id="@+id/accept_order"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/construct_order_bottom_margin_right"
            android:layout_marginLeft="10dp"
            android:text="@string/order_user_operate_return"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background_selector"
            android:layout_marginBottom="@dimen/construct_order_bottom_margin_bottom"
            android:id="@+id/reject_order"/>
    </LinearLayout>
    <include layout="@layout/item_configuration_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider"
        android:layout_above="@id/operate_bottom"
        android:layout_marginTop="16dp"/>
    <!--<ListView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:divider="@android:color/transparent"-->
        <!--android:dividerHeight="26dp"-->
        <!--android:paddingLeft="16dp"-->
        <!--android:paddingRight="16dp"-->
        <!--android:paddingTop="10dp"-->
        <!--android:paddingBottom="10dp"-->
        <!--android:id="@+id/order_configuration_list"-->
        <!--android:layout_below="@id/divider"-->
        <!--android:layout_above="@id/operate_bottom"-->
        <!--android:layout_marginTop="16dp"/>-->
</RelativeLayout>
